# hoot

./: .gitignore  Cargo.toml  LICENSE  bun.lockb  components.json  nuxt.config.ts  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
